Fixed to work after Discord design update and added more features

--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
     "email": "DISCORD EMAIL/PHONE NUMBER",
-    "password": "DiSCORD PASSWORD",
-    "t2fa": "2FA CODE HERE"
+    "password": "DiSCORD PASSWORD"
 }
